--- a/.github/workflows/leetcode-heatmap.yml
+++ b/.github/workflows/leetcode-heatmap.yml
@@ -2,10 +2,9 @@ name: Update LeetCode Heatmap
 
 on:
   schedule:
-    - cron: "17 2 * * *"       # daily at 02:17 UTC
+    - cron: "0 */6 * * *"      # every 6 hours (adjust as you like)
   workflow_dispatch:
 
-# allow the workflow to push to your repo
 permissions:
   contents: write
 
@@ -16,20 +15,38 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Fetch heatmap SVG (with retries)
+      - name: Fetch heatmap SVG (with retries or fallback)
         run: |
           set -euxo pipefail
           mkdir -p assets
-          # Try up to 6 times in case the service is flaky
+          OUT="assets/leetcode-heatmap.svg"
+
+          # Try up to 6 times to fetch the live SVG
+          OK=0
           for i in 1 2 3 4 5 6; do
-            curl -fsSL \
-              -H "User-Agent: github-action" \
+            if curl -fsSL -H "User-Agent: github-action" \
               "https://leetcard.jacoblin.cool/Kelony11?ext=heatmap&theme=dark&cache=0" \
-              -o assets/leetcode-heatmap.svg && break || sleep 15
+              -o "$OUT"; then
+              # Ensure file is not empty
+              if [ -s "$OUT" ]; then OK=1; break; fi
+            fi
+            sleep 15
           done
-          test -s assets/leetcode-heatmap.svg
-          echo "Downloaded size:"
-          wc -c assets/leetcode-heatmap.svg
+
+          # If still not OK, write a fallback SVG so README never breaks
+          if [ $OK -eq 0 ]; then
+            cat > "$OUT" <<'SVG'
+        <svg xmlns="http://www.w3.org/2000/svg" width="760" height="180">
+          <rect width="100%" height="100%" fill="#0d1117"/>
+          <text x="50%" y="50%" fill="#9aa6b2" font-size="18" text-anchor="middle" dominant-baseline="middle">
+            LeetCode heatmap unavailable — retrying soon…
+          </text>
+        </svg>
+        SVG
+          fi
+
+          echo "Result size:"
+          wc -c "$OUT"
 
       - name: Commit if changed
         run: |
