--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -64,6 +64,11 @@ jobs:
             ["SwiftUI.svg"]="https://img.shields.io/badge/SwiftUI-FA7343?style=for-the-badge&logo=swift&logoColor=white"
             ["Tanstack-Router.svg"]="https://img.shields.io/badge/TanStack%20Router-FF4154?style=for-the-badge&logo=tanstack&logoColor=white"
             ["SQL"]="https://img.shields.io/badge/SQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white"
+            ["Git"]="https://img.icons8.com/color/48/000000/git.png"
+            ["Postman"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postman/postman-original.svg"
+            ["Linux"]="https://img.icons8.com/color/48/000000/linux.png"
+            ["Jasmine"]="https://www.vectorlogo.zone/logos/jasmine/jasmine-icon.svg"
+            ["Pytest"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytest/pytest-original.svg"
           )
           # Note: map key "C++.svg" ensures the output filename contains the plus signs.
           for name in "${!badges[@]}"; do
