--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -53,17 +53,17 @@ jobs:
         shell: bash
         run: |
           declare -A badges=(
-            ["JavaScript"]="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
-            ["TypeScript"]="https://img.shields.io/badge/TypeScript-3178C6?style=for-the-badge&logo=typescript&logoColor=white"
-            ["Python"]="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
-            ["Swift"]="https://img.shields.io/badge/Swift-FA7343?style=for-the-badge&logo=swift&logoColor=white"
+            ["JavaScript"]="https://www.vectorlogo.zone/logos/javascript/javascript-icon.svg"
+            ["TypeScript"]="https://www.vectorlogo.zone/logos/typescriptlang/typescriptlang-icon.svg"
+            ["Python"]="https://www.vectorlogo.zone/logos/python/python-icon.svg"
+            ["Swift"]="https://www.vectorlogo.zone/logos/swift/swift-icon.svg"
             ["PostgreSQL"]="https://img.shields.io/badge/SQL-4479A1?style=for-the-badge&logo=postgresql&logoColor=white"
-            ["C++.svg"]="https://img.shields.io/badge/C%2B%2B-00599C?style=for-the-badge&logo=cplusplus&logoColor=white"
+            ["C++.svg"]="https://www.vectorlogo.zone/logos/isocpp/isocpp-icon.svg"
             ["React.svg"]="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB"
             ["Node.js.svg"]="https://img.shields.io/badge/Node.js-339933?style=for-the-badge&logo=node.js&logoColor=white"
             ["SwiftUI.svg"]="https://img.shields.io/badge/SwiftUI-FA7343?style=for-the-badge&logo=swift&logoColor=white"
             ["Tanstack-Router.svg"]="https://img.shields.io/badge/TanStack%20Router-FF4154?style=for-the-badge&logo=tanstack&logoColor=white"
-            ["SQL"]="https://img.shields.io/badge/SQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white"
+            ["SQL"]="https://www.vectorlogo.zone/logos/mysql/mysql-icon.svg"
             ["Git"]="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
             ["Postman"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postman/postman-original.svg"
             ["Linux"]="https://www.vectorlogo.zone/logos/linux/linux-icon.svg"
@@ -75,6 +75,8 @@ jobs:
             ["AWS"]="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-icon.svg"
             ["Docker"]="https://www.vectorlogo.zone/logos/docker/docker-icon.svg"
             ["Github-actions"]="https://www.vectorlogo.zone/logos/github/github-icon.svg"
+            ["C"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"
+            
 
             
           )
