--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -59,10 +59,9 @@ jobs:
             ["Swift"]="https://www.vectorlogo.zone/logos/swift/swift-icon.svg"
             ["PostgreSQL"]="https://img.shields.io/badge/SQL-4479A1?style=for-the-badge&logo=postgresql&logoColor=white"
             ["C++.svg"]="https://www.vectorlogo.zone/logos/isocpp/isocpp-icon.svg"
-            ["React.svg"]="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB"
-            ["Node.js.svg"]="https://img.shields.io/badge/Node.js-339933?style=for-the-badge&logo=node.js&logoColor=white"
-            ["SwiftUI.svg"]="https://img.shields.io/badge/SwiftUI-FA7343?style=for-the-badge&logo=swift&logoColor=white"
-            ["Tanstack-Router.svg"]="https://img.shields.io/badge/TanStack%20Router-FF4154?style=for-the-badge&logo=tanstack&logoColor=white"
+            ["React.svg"]="https://www.vectorlogo.zone/logos/reactjs/reactjs-icon.svg"
+            ["Node.js.svg"]="https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg"
+            ["Tanstack-Router.svg"]="https://cdn.simpleicons.org/tanstack/FF4154"
             ["SQL"]="https://www.vectorlogo.zone/logos/mysql/mysql-icon.svg"
             ["Git"]="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
             ["Postman"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postman/postman-original.svg"
