--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -57,7 +57,7 @@ jobs:
             ["TypeScript"]="https://www.vectorlogo.zone/logos/typescriptlang/typescriptlang-icon.svg"
             ["Python"]="https://www.vectorlogo.zone/logos/python/python-icon.svg"
             ["Swift"]="https://www.vectorlogo.zone/logos/swift/swift-icon.svg"
-            ["PostgreSQL"]="https://img.shields.io/badge/SQL-4479A1?style=for-the-badge&logo=postgresql&logoColor=white"
+            ["PostgreSQL"]="https://www.vectorlogo.zone/logos/postgresql/postgresql-icon.svg"
             ["C++.svg"]="https://www.vectorlogo.zone/logos/isocpp/isocpp-icon.svg"
             ["React.svg"]="https://www.vectorlogo.zone/logos/reactjs/reactjs-icon.svg"
             ["Node.js.svg"]="https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg"
@@ -68,13 +68,13 @@ jobs:
             ["Linux"]="https://www.vectorlogo.zone/logos/linux/linux-icon.svg"
             ["Jasmine"]="https://www.vectorlogo.zone/logos/jasmine/jasmine-icon.svg"
             ["Pytest"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytest/pytest-original.svg"
-            ["Firebase"]="https://img.shields.io/badge/Firebase%20(Auth%2C%20Firestore%2C%20Storage)-FFCA28?style=for-the-badge&logo=firebase&logoColor=black"
-            ["Firestore"]="https://img.shields.io/badge/Firestore%20(NoSQL)-FFCA28?style=for-the-badge&logo=firebase&logoColor=black"
-            ["Rest-Json"]="https://img.shields.io/badge/REST%2FJSON-85EA2D?style=for-the-badge&logo=swagger&logoColor=black"
+            ["Firebase"]="https://www.vectorlogo.zone/logos/firebase/firebase-icon.svg"
+            ["Rest-Json"]="https://cdn.simpleicons.org/swagger/85EA2D"
             ["AWS"]="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-icon.svg"
             ["Docker"]="https://www.vectorlogo.zone/logos/docker/docker-icon.svg"
             ["Github-actions"]="https://www.vectorlogo.zone/logos/github/github-icon.svg"
             ["C"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"
+            ["MongoDB"]="https://www.vectorlogo.zone/logos/mongodb/mongodb-icon.svg"
             
 
             
