--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -61,7 +61,7 @@ jobs:
             ["C++.svg"]="https://www.vectorlogo.zone/logos/isocpp/isocpp-icon.svg"
             ["React.svg"]="https://www.vectorlogo.zone/logos/reactjs/reactjs-icon.svg"
             ["Node.js.svg"]="https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg"
-            ["Tanstack-Router.svg"]="https://cdn.simpleicons.org/tanstack/FF4154"
+            ["Tanstack-Router.svg"]="https://cdn.simpleicons.org/tanstack"
             ["SQL"]="https://www.vectorlogo.zone/logos/mysql/mysql-icon.svg"
             ["Git"]="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
             ["Postman"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postman/postman-original.svg"
