--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -61,7 +61,7 @@ jobs:
             ["C++.svg"]="https://www.vectorlogo.zone/logos/isocpp/isocpp-icon.svg"
             ["React.svg"]="https://www.vectorlogo.zone/logos/reactjs/reactjs-icon.svg"
             ["Node.js.svg"]="https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg"
-            ["Tanstack-Router.svg"]="https://cdn.simpleicons.org/tanstack"
+            ["Tanstack-Router.svg"]="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tanstack.svg"
             ["SQL"]="https://www.vectorlogo.zone/logos/mysql/mysql-icon.svg"
             ["Git"]="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
             ["Postman"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postman/postman-original.svg"
@@ -69,7 +69,7 @@ jobs:
             ["Jasmine"]="https://www.vectorlogo.zone/logos/jasmine/jasmine-icon.svg"
             ["Pytest"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytest/pytest-original.svg"
             ["Firebase"]="https://www.vectorlogo.zone/logos/firebase/firebase-icon.svg"
-            ["Rest-Json"]="https://cdn.simpleicons.org/swagger/85EA2D"
+            ["Rest-Json"]="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/swagger.svg"
             ["AWS"]="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-icon.svg"
             ["Docker"]="https://www.vectorlogo.zone/logos/docker/docker-icon.svg"
             ["Github-actions"]="https://www.vectorlogo.zone/logos/github/github-icon.svg"
