--- a/.github/workflows/profile-assets.yml
+++ b/.github/workflows/profile-assets.yml
@@ -75,6 +75,7 @@ jobs:
             ["Github-actions"]="https://www.vectorlogo.zone/logos/github/github-icon.svg"
             ["C"]="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"
             ["MongoDB"]="https://www.vectorlogo.zone/logos/mongodb/mongodb-icon.svg"
+            ["Yahoo_finance_api"]="https://www.vectorlogo.zone/logos/yahoo/yahoo-icon.svg"
             
           )
           # Note: map key "C++.svg" ensures the output filename contains the plus signs.
